--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,9 @@ services:
     restart: always
     ports:
       - "3000:3000"
+    networks:
+      - scoobydoo
+
+networks:
+  scoobydoo:
+    external: true
