--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Komodo Deployment
+        env:
+          WEBHOOK_URL: ${{ secrets.KOMODO_WEBHOOK_URL }}
+          WEBHOOK_SECRET: ${{ secrets.KOMODO_WEBHOOK_SECRET }}
+          PAYLOAD: '{"ref": "refs/heads/main", "pusher": {"name": "github-actions"}}'
         run: |
-          curl -X POST "${{ secrets.KOMODO_WEBHOOK_URL }}" \
-          -H "Content-Type: application/json" \
-          --fail \
-          --verbose
+          PAYLOAD='{"ref": "refs/heads/main", "pusher": {"name": "github-actions"}}'
+          
+          SIGNATURE=$(python3 -c "import hmac, hashlib, os; print('sha256=' + hmac.new(os.environ['WEBHOOK_SECRET'].encode(), os.environ['PAYLOAD'].encode(), hashlib.sha256).hexdigest())" 2>/dev/null)
+                  
+          curl -X POST "$WEBHOOK_URL" \
+            -H "Content-Type: application/json" \
+            -H "X-Hub-Signature-256: $SIGNATURE" \
+            -H "X-GitHub-Event: push" \
+            -d "$PAYLOAD" \
+            --fail
