--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.14",
 		"@tanstack/table-core": "^8.21.3",
+		"@types/geojson": "^7946.0.16",
 		"bits-ui": "^2.14.3",
 		"clsx": "^2.1.1",
 		"prettier": "^3.6.2",
